fixed responsive layout issues

--- a/style.css
+++ b/style.css
@@ -176,9 +176,9 @@ section {
     pointer-events: auto;
 }
 .modalDialog div {
-    width: 80vw;
+    width: 90vw;
     position: relative;
-    margin: 10% auto;
+    margin: 5% auto;
     padding: 20px 10px;
     border-radius: 5px;
     background: #2B2B2B;
@@ -190,7 +190,7 @@ section {
     width: 10px;
 }
 .github {
-    height: 50px;
+    height: 30px;
 }
 .info_icon {
     height: 19px;
